\name{NEWS}
\title{NEWS file for the gCMAPWeb package}

\section{Changes in version 1.15.1}{
  \itemize{
  \item{NEW: }{Added citation information.}
}
}

\section{Changes in version 1.13.3}{
  \itemize{
  \item{BUGFIX: }{Updated NAMESPACE by adding imports recommended by R CMD check.}
}
}

\section{Changes in version 1.13.1}{
  \itemize{
  \item{UPDATE: }{Added note about incompatibility with RStudio.}
}
}

\section{Changes in version 1.7.2}{
  \itemize{
  \item{BUGFIX: }{Removed redundant Rd file.}
}
}
\section{Changes in version 1.7.1}{
  \itemize{
  \item{BUGFIX: }{Updated roxygen tags and specified imports in a more
  granular fashion.}
}
}

\section{Changes in version 1.3.2}{
  \itemize{
  \item{BUGFIX: }{Moved the 'Rook' package from 'Imports' to 'Depends'}
}
}

\section{Changes in version 1.3.1}{
  \itemize{
  \item{CHANGE: }{Vignettes are now stored in vignettes directory.}
}
}

\section{Changes in version 1.1.7}{
  \itemize{
  \item{BUGFIX: }{Fixed memory leak and enabled html_table function to deal with multibyte strings.}
}
}

\section{Changes in version 1.1.6}{
  \itemize{
  \item{UPDATE: }{gCMAPWeb now issues an error when javascript is not available in the browser.}
}
}

\section{Changes in version 1.1.2}{
  \itemize{
 \item{NEW: }{Added tutorial as a new vignette.}
}
}
\section{Changes in version 1.1.1}{
  \itemize{
 \item{BUGFIX: }{Heatmaps are now displayed for results of directional query.}
}
}