@@ -1,9 +1,10 @@
 Package: gCMAPWeb
 Type: Package
 Title: A web interface for gene-set enrichment analyses
-Version: 1.27.0
-Date: 2017-01-19
+Version: 1.27.1
+Date: 2020-03-22
 Author: Thomas Sandmann
+PackageStatus: Deprecated
 Maintainer: Thomas Sandmann <sandmann.t@gmail.com>
 Description: The gCMAPWeb R package provides a graphical user interface
     for the gCMAP package. gCMAPWeb uses the Rook package and can
